# libGPCGUI

./: .gitmodules  CMakeLists.txt  project-config.cmake.in
docs/: log.txt
lib/: CMakeLists.txt
lib/include/gpc/gui/: button_view.hpp  button_viewmodel.hpp  container.hpp  control_view.hpp  font_registry.hpp  gui.hpp  property_set.hpp  root_widget.hpp  widget.hpp
lib/include/gpc/gui/pixel_grid/: button.hpp
lib/include/gpc/gui/pixel_grid/simple_theming/: button.hpp
lib/include/gpc/gui/view_models/: button.hpp  control.hpp
lib/include/gpc/gui/views/: button.hpp  control.hpp
lib/include/gpc/gui/views/pixel_grid/: button.hpp
testapp/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  property_set.cpp
